--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: pulpo-engine-test1-dev
+    environment: pulpo-engine-contacts-dev
     group_suffix: null
 global:
   application_name: pulpo-engine-test1
