--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: pulpo-engine-contacts-dev
     group_suffix: null
 global:
-  application_name: pulpo-engine-test1
+  application_name: pulpo-engine-contacts
   branch: null
   default_ec2_keyname: aws-eb
   default_platform: Multi-container Docker 1.12.6 (Generic)
