--- a/metricbeat/conf/modules.d/jolokia.yml
+++ b/metricbeat/conf/modules.d/jolokia.yml
@@ -22,7 +22,13 @@
           field: cpu.process_load
         - attr: SystemCpuLoad
           field: cpu.system_load
+    - mbean: 'org.springframework.boot:type=Endpoint,name=metricsEndpoint'
+      attributes:
+        - attr: Data
+          field: springboot.metrics
+          field_type: java.Object
     - mbean: 'org.springframework.boot:type=Endpoint,name=healthEndpoint'
       attributes:
-        - attr: Data.status
-          field: status
+        - attr: Data
+          field: springboot.health
+          field_type: java.Object
