--- a/metricbeat/conf/modules.d/jolokia.yml
+++ b/metricbeat/conf/modules.d/jolokia.yml
@@ -22,7 +22,13 @@
           field: cpu.process_load
         - attr: SystemCpuLoad
           field: cpu.system_load
-    - mbean: 'org.springframework.boot:type=Endpoint,name=healthEndpoint'
+    - mbean: 'org.springframework.boot:name=metricsEndpoint,type=Endpoint'
       attributes:
         - attr: Data
-          field: springboot.health
+          field: springboot.data
+          field_type: java.Object
+  # template to use
+  template.name: "metric_springboot"
+  template.path: "metricbeat.template-metrics.json"
+  template.versions.2x.enabled: false
+  template.versions.6x.enabled: false
