--- a/metricbeat/conf/modules.d/jolokia.yml
+++ b/metricbeat/conf/modules.d/jolokia.yml
@@ -25,10 +25,5 @@
     - mbean: 'org.springframework.boot:name=metricsEndpoint,type=Endpoint'
       attributes:
         - attr: Data
-          field: springboot.data
-          field_type: java.Object
-  # template to use
-  template.name: "metric_springboot"
-  template.path: "metricbeat.template-metrics.json"
-  template.versions.2x.enabled: false
-  template.versions.6x.enabled: false
+          path: status
+          field: springboot.status
