--- a/metricbeat/conf/modules.d/jolokia.yml
+++ b/metricbeat/conf/modules.d/jolokia.yml
@@ -22,8 +22,7 @@
           field: cpu.process_load
         - attr: SystemCpuLoad
           field: cpu.system_load
-    - mbean: 'org.springframework.boot:type=Endpoint,name=healthEndpoint'
+    - mbean: 'org.springframework.boot:type=Endpoint,name=healthEndpoint/Data'
       attributes:
-        - attr: Data
-          path: status
+        - attr: status
           field: springboot.status
