--- a/metricbeat/conf/metricbeat.yml
+++ b/metricbeat/conf/metricbeat.yml
@@ -34,3 +34,10 @@ output.elasticsearch:
 logging.level: debug
 
 logging.to_files: true
+
+#================================ Processors ===================================
+
+processors:
+- drop_fields:
+    fields: ["jolokia.metrics.springboot.metrics.classes", "jolokia.metrics.springboot.metrics.heap", "jolokia.metrics.springboot.metrics.mem"]
+#
