--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -6,7 +6,7 @@ global:
   application_name: pulpo-engine-contacts
   branch: null
   default_ec2_keyname: aws-eb
-  default_platform: Multi-container Docker 1.12.6 (Generic)
+  default_platform: Multi-container Docker 17.03.1-ce (Generic)
   default_region: eu-west-1
   instance_profile: null
   platform_name: null
