--- a/metricbeat/conf/metricbeat.yml
+++ b/metricbeat/conf/metricbeat.yml
@@ -30,10 +30,20 @@ fields:
 output.elasticsearch:
   hosts: '${PULPO_CONTACTS_ENGINE_BEAT_ES_HOSTS}'
 
+output.console:
+  enabled: false
+
 #================================ Logging ======================================
 logging.level: debug
 
 logging.to_files: true
+
+logging.to_syslog: false
+
+logging.files:
+  path: /usr/share/metricbeat/logs
+  name: filebeat.log
+  keepfiles: 5
 
 #================================ Processors ===================================
 
