--- a/metricbeat/conf/metricbeat.yml
+++ b/metricbeat/conf/metricbeat.yml
@@ -47,5 +47,4 @@ logging.files:
 
 processors:
 - drop_fields:
-    fields: ["jolokia.metrics.springboot.metrics.classes", "jolokia.metrics.springboot.metrics.heap", "jolokia.metrics.springboot.metrics.mem", "jolokia.metrics.springboot.metrics.nonheap", "jolokia.metrics.springboot.metrics.threads"]
-#
+    fields: ["jolokia.metrics.springboot.metrics.classes", "jolokia.metrics.springboot.metrics.heap", "jolokia.metrics.springboot.metrics.mem", "jolokia.metrics.springboot.metrics.nonheap", "jolokia.metrics.springboot.metrics.threads", "jolokia.metrics.springboot.metrics.counter.status.200.projectId.contacts_mapping_rule", "gauge.response.projectId.data-sources"]
