PULPO-93 Install terraform

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
-jdk: oraclejdk8
+language: bash
+rvm: 2.4.1
+dist: trusty
+sudo: required
+cache:
+  directories:
+  - "${HOME}/bin"
 
-language: java
-
-install: true
+# Install terraform
+install:
+    - pushd "${TMPDIR}" ;
+    - curl -sSL -o terraform.zip "https://releases.hashicorp.com/terraform/0.9.0/terraform_0.9.0_linux_amd64.zip" ;
+    - unzip terraform.zip ;
+    - mv -v terraform "${HOME}/bin/terraform" ;
+    - chmod +x "${HOME}/bin/terraform" ;
+    - popd ;
+    - terraform version ;
 
 script:
     - ./gradlew checkSourceFormatting
+
+after_success:
+
+
+
+    - git archive --format=zip HEAD > com-liferay-osb-pulpo-engine-contacts-deployment-private.zip
