PULPO-173 Fix format

--- a/.ebextensions/https_certificate.config
+++ b/.ebextensions/https_certificate.config
@@ -1,5 +1,10 @@
 option_settings:
-   aws:elb:listener:443:
-   SSLCertificateId: arn:aws:acm:eu-west-1:569796009809:certificate/3715cb2b-8a3a-4bca-8e8e-cad1b07348f8
-   ListenerProtocol: HTTPS
-   InstancePort: 80
+  - namespace: aws:elb
+    option_name: listener
+    value: 443
+  - option_name: SSLCertificateId
+    value: arn:aws:acm:eu-west-1:569796009809:certificate/3715cb2b-8a3a-4bca-8e8e-cad1b07348f8
+  - option_name: ListenerProtocol
+    value: HTTPS
+  - option_name: InstancePort
+    value: 80
