--- a/.ebextensions/https_certificate.config
+++ b/.ebextensions/https_certificate.config
@@ -1,10 +1,10 @@
 option_settings:
-  - namespace: aws:elb
-    option_name: listener
-    value: 443
-  - option_name: SSLCertificateId
+  - namespace: aws:elb:listener:443
+    option_name: SSLCertificateId
     value: arn:aws:acm:eu-west-1:569796009809:certificate/3715cb2b-8a3a-4bca-8e8e-cad1b07348f8
-  - option_name: ListenerProtocol
+  - namespace: aws:elb:listener:443
+    option_name: ListenerProtocol
     value: HTTPS
-  - option_name: InstancePort
+  - namespace: aws:elb:listener:443
+    option_name: InstancePort
     value: 80
