PULPO-230 enable https from the load balancer to the engine

--- a/.ebextensions/https_certificate.config
+++ b/.ebextensions/https_certificate.config
@@ -5,6 +5,9 @@ option_settings:
   - namespace: aws:elb:listener:443
     option_name: ListenerProtocol
     value: HTTPS
+    - namespace: aws:elb:listener:443
+    option_name: InstanceProtocol
+    value: HTTPS
   - namespace: aws:elb:listener:443
     option_name: InstancePort
-    value: 80
+    value: 443
