PULPO-51 remove not needed files

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,6 @@
-dist: trusty
 language: java
-sudo: required
 
-install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y awscli
+install: true
 
 script:
   - ./gradlew checkSourceFormatting
-
-after_success:
-  - git archive --format=zip HEAD > com-liferay-osb-pulpo-engine-contacts-deployment-private.zip
-  - aws s3 cp com-liferay-osb-pulpo-engine-contacts-deployment-private.zip s3://osb-pulpo-engine-contacts-deployment/ --region ${AWS_REGION}
