--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
 com.liferay.source.formatter.version=1.0.455
-project.path.prefix=:private:apps:osb-pulpo:osb-pulpo-engine-contacts-deployment
+project.path.prefix=:private:apps:osb-pulpo:osb-pulpo-jobs
