--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
+com.liferay.osb.lcs.docker.apply.plugin=true
 com.liferay.source.formatter.version=1.0.455
 project.path.prefix=:private:apps:osb-pulpo:osb-pulpo-jobs
+systemProp.repository.private.password=0GgG9J3X42k677H
+systemProp.repository.private.url=https://repository.liferay.com/nexus/service/local/repo_groups/private/content/
+systemProp.repository.private.username=private
