--- a/osb-pulpo-jobs-interests/src/main/docker/Dockerfile
+++ b/osb-pulpo-jobs-interests/src/main/docker/Dockerfile
@@ -13,6 +13,8 @@ pip3 install jupyter && \
 pip3 install spacy  && python -m spacy download en && \
 pip3 install pandas && \
 pip3 install langdetect && \
-pip3 install furl
+pip3 install furl && \
+pip3 install boto3 && \
+pip3 install smart_open
 
 ENTRYPOINT /submit.sh
