--- a/osb-pulpo-jobs-interests/build.gradle
+++ b/osb-pulpo-jobs-interests/build.gradle
@@ -1,11 +1,16 @@
-import com.bmuschko.gradle.docker.tasks.container.*
-import com.bmuschko.gradle.docker.tasks.image.*
+import com.bmuschko.gradle.docker.DockerRemoteApiPlugin
+import com.bmuschko.gradle.docker.tasks.container.DockerCreateContainer
+import com.bmuschko.gradle.docker.tasks.container.DockerRemoveContainer
+import com.bmuschko.gradle.docker.tasks.container.DockerStartContainer
+import com.bmuschko.gradle.docker.tasks.container.DockerStopContainer
+import com.bmuschko.gradle.docker.tasks.container.extras.DockerWaitHealthyContainer
+import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 import com.liferay.gradle.plugins.app.docker.AppDockerPlugin
 
 buildscript {
 	dependencies {
-		classpath group: "com.bmuschko", name: "gradle-docker-plugin", version: "3.2.0"
+		classpath group: "com.bmuschko", name: "gradle-docker-plugin", version: "3.2.4"
 		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.app.docker", version: "1.0.4"
 	}
 
@@ -16,13 +21,22 @@ buildscript {
 	}
 }
 
-apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
 apply plugin: AppDockerPlugin
+apply plugin: DockerRemoteApiPlugin
+
+task checkDocker(type: DockerWaitHealthyContainer)
+task createDocker(type: DockerCreateContainer)
+task removeDocker(type: DockerRemoveContainer)
+task startDocker(type: DockerStartContainer)
+task stopDocker(type: DockerStopContainer)
 
 task copyJupyterFiles(type: Copy) {
 	from "${projectDir}/src/main/jupyter"
 	into "${buildDir}/docker/jupyter"
 }
+
+def awsAccessKeyId = System.getenv().get("AWS_ACCESS_KEY_ID")
+def awsSecretAccessKey = System.getenv().get("AWS_SECRET_ACCESS_KEY")
 
 afterEvaluate {
 	for (DockerTagImage dockerTagImage in tasks.withType(DockerTagImage)) {
@@ -37,6 +51,28 @@ appDocker {
 	inputDir "src/main/docker"
 }
 
+checkDocker {
+	targetContainerId {
+		appDocker.imageName
+	}
+}
+
+createDocker {
+	dependsOn buildAppDockerImage
+	dependsOn removeDocker
+
+	containerName = appDocker.imageName
+
+	env = [
+		"AWS_ACCESS_KEY_ID=$awsAccessKeyId",
+		"AWS_SECRET_ACCESS_KEY=$awsSecretAccessKey",
+	]
+
+	targetImageId {
+		appDocker.imageUser + "/" + appDocker.imageName
+	}
+}
+
 docker {
 	registryCredentials {
 		username = System.getenv().get("DOCKER_USER")
@@ -46,4 +82,34 @@ docker {
 
 prepareAppDockerImageInputDir {
 	finalizedBy copyJupyterFiles
+}
+
+removeDocker {
+	force = true
+
+	onError {
+	}
+
+	targetContainerId {
+		appDocker.imageName
+	}
+}
+
+startDocker {
+	finalizedBy {
+		checkDocker
+	}
+
+	targetContainerId {
+		appDocker.imageName
+	}
+}
+
+stopDocker {
+	onError {
+	}
+
+	targetContainerId {
+		appDocker.imageName
+	}
 }
